...
                Form{
                    
                    //name
                    Section{
                        FormLabelView(title: "Name", iconName: "character.book.closed", color:.blue)
                        TextField("Enter the player name...",text:$name)
                            .accessibilityIdentifier("createName")
                            .autocapitalization(.words)
                    }
                    
                    //country
                    Section{
                        Picker("Country:", selection: $selectedCountry){
...
                    Section{
                        FormLabelView(title: "Birth Year", iconName: "birthday.cake.fill", color:.blue)
                            .foregroundColor(.gray)
                        
                        
                        TextField("enter your birth year...",text:$birthYear)
                            .accessibilityIdentifier("createDOB")
                            .autocapitalization(.words)
                        
                    }
                    
                    Section{
                        //rating
                        FormLabelView(title: "Rating", iconName: "number.square.fill", color:.blue)
                        TextField("Enter the elo of your player...",text:$rating)
                            .accessibilityIdentifier("createRating")

                        
                            .autocapitalization(.words)
                        
                    }
                    
...
                    errorMsg = "Please Make sure to Fill form correctly"
                }else{
                    model.addData(name: name, rating: rating, birthyear: birthYear, country: selectedCountry)
                    presentationMode.wrappedValue.dismiss()
                }
            }){
                Text("Done")
            })
            .navigationTitle("Create")
        }
    }
}

 struct CreateNewPlayerForm_Previews: PreviewProvider {
     static var previews: some View {
...
